lab 4 updates -- alignment fixed

--- a/code/Jasmine/Lab_4/style.css
+++ b/code/Jasmine/Lab_4/style.css
@@ -50,3 +50,7 @@ input[type="text"]:focus {
         justify-content: space-evenly
     }
 }
+
+@media (min-width: 1100px) {
+
+}
